# Reverse-Shell-Manager

./: README.md  Reverse-Shell-Manager(Python3).py  Reverse-Shell-Manager.py  host  pyproject.toml  slave.py
log/: README.md
rshm/utils/: log.py  misc.py
utils/: color.py  log.py
